# thera

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEBUDDY.md  README.md  ROADMAP.md  TODO.md  config.example.yaml  pyproject.toml
.claude/commands/: thera.md
dev_docs/: README.md  update_knowledge.md
dev_docs/innovations/: aigc_engineering.md  cloud_computing.md  devtools.md  knowledge_engineering.md
docs/: RAEDME.md  README.md  cli.md  memory.md
docs/add/: README.md
docs/arch/: README.md
docs/default/: default.md  main.md  meta.md
docs/dev/: README.md  architecture.md  default.md  devops.md  fsm-design.md  git-ops-design.md  main.md  meta.md  test-report.md  user-features.md
docs/drafts/: README.md  problems.md
docs/drd/: message_view.md
docs/handbooks/: admin_management.md  aigc_engineering.md  deliberation_management.md  devops.md  human_resources.md  knowledge_engineering.md  web_engineering.md
docs/ixd/: README.md  vital-framework.md
docs/models/: writing_engineering.md
docs/mrd/: README.md  requirements.md  users.md
docs/ops/: README.md
docs/prd/: README.md  default.md  features.md  git_state_machine.md  index.md  requirements.md  scenarios.md  stories.md
docs/quanttide/: README.md
docs/quanttide_comm/: README.md  context.md  dialogue.md  medium.md
docs/specifications/: README.md
docs/thoughts/: thinking.md
docs/user/: README.md  auto-commit.md  cli.md  default.md  dialogue_screen.mov  doc-check.md  index.md  submodule-sync.md  workflow.md
docs/usercases/: extracting.md
examples/: config.py  feishu.py  graphiti.py  llm.py  neo4j_graphrag_example.py
examples/docs/: feishu.py  feishu_to_jupyterbook.py
examples/knowl/: config.py  discover.py  graphiti.py  llm.py  neo4j_graphrag.py  test_graphiti.py
examples/think/: brainstormer.py
examples/write/: analyzer.py  merge_auxiliary.py  merge_content.py
integrated_tests/: test_graphiti.py  test_reasoner.py
scripts/: audit.py  domain_deps.py  import_dev_docs.py  run-studio.sh  shadow_verify.sh
src/studio/: pubspec.yaml
tests/: conftest.py  test_auto_commit.py  test_behavior_parity.py  test_cli.py  test_doc_check.py  test_fsm.py  test_git_ops.py  test_integration.py  test_llm.py  test_main.py  test_storage_state.py  test_submodule_sync.py  test_think_domain.py  test_user_features.py
(+113 files in other folders)
