[build-system]
requires = ["hatchling"]  # uv 推荐使用 hatchling
build-backend = "hatchling.build"

[project]
name = "thera"
version = "0.1.0-alpha.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "graphiti-core>=0.23.1",
    "lark-oapi>=1.5.3",
    "llvmlite>=0.44,<0.45",
    "neo4j-graphrag>=1.7.0",
    "openai>=2.7.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "textual>=6.11.0",
]

[project.scripts]
thera = "thera.__main__:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["thera"]
