[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thera"
version = "0.1.1"
description = "Quanttide 数字资产治理工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.1",
]

[project.scripts]
thera = "thera.cli:main"
vital = "vital.main:main"

[project.optional-dependencies]
gui = [
    "kivy>=2.3.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["thera", "vital"]

[tool.hatch.metadata]
allow-direct-references = true
